src/objects/MICO_Planning_Poker_Votes__c.object
<CustomObject>
    <description>Business Description: This object is used as part of the user story estimation process

Used In: Mission Control App</description>
    <fields>
        <fullName>Planning_Poker_Session_Content__c</fullName>
        <label>Planning Poker Session Content</label>
        <referenceTo>MICO_Planning_Poker_Session_Content__c</referenceTo>
        <relationshipLabel>Planning Poker Votes</relationshipLabel>
        <relationshipName>MICO_Planning_Poker_Votes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Planning_Poker_Votes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vote__c</fullName>
        <label>Vote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Planning Poker Votes</label>
    <nameField>
        <label>Planning Poker Vote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning Poker Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>